--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
 </head>
   <body class="antialiased selection:bg-brand-gold selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
