--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
   <!-- Preload Critical Assets -->
   <link rel="preload" fetchpriority="high" as="image" href="/hero-portrait.webp" type="image/webp">
+  <link rel="preload" fetchpriority="high" as="image" href="/background-hero.webp" type="image/webp">
+
+  <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/pwa-512x512.png">
+  <link rel="apple-touch-icon" href="/pwa-192x192.png">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -87,94 +92,6 @@
       rel="stylesheet">
   </noscript>
 
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            brand: {
-              black: '#0a0a0a',
-              gray: '#171717',
-              light: '#FAFAFA',
-              gold: '#B4975A',
-              goldHover: '#C6A355',
-            }
-          },
-          fontFamily: {
-            sans: ['"Inter"', 'sans-serif'],
-            serif: ['"Playfair Display"', 'serif'],
-          },
-          backgroundImage: {
-            'noise': "url('data:image/svg+xml,%3Csvg viewBox=%220 0 200 200%22 xmlns=%22http://www.w3.org/2000/svg%22%3E%3Cfilter id=%22noiseFilter%22%3E%3CfeTurbulence type=%22fractalNoise%22 baseFrequency=%220.65%22 numOctaves=%223%22 stitchTiles=%22stitch%22/%3E%3C/filter%3E%3Crect width=%22100%25%22 height=%22100%25%22 filter=%22url(%23noiseFilter)%22 opacity=%220.05%22/%3E%3C/svg%3E')",
-          }
-        }
-      }
-    }
-  </script>
-  <style>
-    html {
-      scroll-behavior: smooth;
-      overflow-x: hidden;
-    }
-
-    body {
-      background-color: #FAFAFA;
-      color: #0a0a0a;
-      overflow-x: hidden;
-    }
-
-    /* Texture Overlay */
-    /* Texture Overlay Removed for Performance */
-
-    /* Custom scrollbar */
-    ::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: #0a0a0a;
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background: #333;
-      border-radius: 3px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background: #B4975A;
-    }
-
-    /* Utilities */
-    .img-grayscale {
-      filter: grayscale(100%);
-      transition: filter 0.8s ease;
-    }
-
-    .hide-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-
-    .hide-scrollbar {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-    }
-  </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.0",
-    "clsx": "https://aistudiocdn.com/clsx@^2.1.0",
-    "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^2.2.0"
-  }
-}
-</script>
 </head>
 
 <body class="antialiased selection:bg-brand-gold selection:text-white">
